update Basics of DataFrames

--- a/lecture codes/02_Basic_DataFrame_Analysis.ipynb
+++ b/lecture codes/02_Basic_DataFrame_Analysis.ipynb
@@ -400,6 +400,7 @@
    "source": [
     "import pandas as pd\n",
     "houses = pd.read_csv(\"data/kc_house_data.csv\")\n",
+    "# to save a dataframe in the current directory: houses.to_csv(\"name.csv\")\n",
     "houses"
    ]
   },
