update Basics of DataFrames

--- a/lecture codes/02_Basic_DataFrame_Analysis.ipynb
+++ b/lecture codes/02_Basic_DataFrame_Analysis.ipynb
@@ -3807,6 +3807,25 @@
    "source": [
     "netflix.describe(include=\"O\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1dfd26f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#read json data\n",
+    "import json\n",
+    "json_obj = \"\"\"\n",
+    "{ \"zoo_animal\": \"Lion\",\n",
+    "   \"fur\" : \"Golden\",\n",
+    "    \"diet\" : [{\"zoo_animal\": \"Gazelle\" , \"food\":\"grass\", \"fur\":\"Brown\"}]\n",
+    "}\n",
+    "\"\"\"\n",
+    "data = json.loads(json_obj)\n",
+    "df = DataFrame(data[\"diet\"])"
+   ]
   }
  ],
  "metadata": {
