update Basics of DataFrames

--- a/lecture codes/02_Basic_DataFrame_Analysis.ipynb
+++ b/lecture codes/02_Basic_DataFrame_Analysis.ipynb
@@ -3826,6 +3826,22 @@
     "data = json.loads(json_obj)\n",
     "df = DataFrame(data[\"diet\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c478960",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#read html data\n",
+    "from pandas import read_html\n",
+    "import pandas as pd\n",
+    "from pandas import DataFrame\n",
+    "url = \"https://www.fdic.gov/resources/resolutions/bank-failures/failed-bank-list/\"\n",
+    "df_list = pd.io.html.read_html(url)\n",
+    "df = df_list[0]"
+   ]
   }
  ],
  "metadata": {
