update Basics of DataFrames

--- a/lecture codes/02_Basic_DataFrame_Analysis.ipynb
+++ b/lecture codes/02_Basic_DataFrame_Analysis.ipynb
@@ -3842,6 +3842,19 @@
     "df_list = pd.io.html.read_html(url)\n",
     "df = df_list[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7377dfe4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#permutation \n",
+    "df = DataFrame(np.arange(16).reshape(4,4))\n",
+    "blender = np.random.permutation(4)\n",
+    "df.take(blender) #returns the rows I asked by blender, it can have repeated rows if I choose in blender"
+   ]
   }
  ],
  "metadata": {
